force-app/main/default/objects/Competitor_Details__c.object
<CustomObject>
    <fields>
        <fullName>Competitor_Details__c</fullName>
        <description>Capture the products details and rates from the current competitor(s)</description>
        <inlineHelpText>Capture the products details and rates from the current competitor(s)</inlineHelpText>
        <label>Competitor Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <label>Competitor</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Competitor</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <inlineHelpText>The Opportunity for which this Competitor Offering relates.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Competitor Offerings</relationshipLabel>
        <relationshipName>Competitor_Offerings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ancillary</fullName>
                </value>
                <value>
                    <fullName>Dental </fullName>
                </value>
                <value>
                    <fullName>Drug </fullName>
                </value>
                <value>
                    <fullName>HMO</fullName>
                    <label>Med HMO</label>
                </value>
                <value>
                    <fullName>PPO</fullName>
                    <label>Med PPO</label>
                </value>
                <value>
                    <fullName>TDI </fullName>
                </value>
                <value>
                    <fullName>Vision </fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Won__c</fullName>
        <defaultValue>false</defaultValue>
        <description>check box to indicate if this competitor won the opportunity with this offering.</description>
        <inlineHelpText>Check this box if a competitor won the Opportunity with this offering.</inlineHelpText>
        <label>Won?</label>
        <type>Checkbox</type>
    </fields>
    <label>Competitor Offering</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Competitor Offering Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitor Offerings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>