force-app/main/default/objects/Competitor_Details__c/fields/Ancillary_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Ancillary_Annual_Revenue__c</fullName>
    <inlineHelpText>This revenue only applies to ancillary products.</inlineHelpText>
    <label>Ancillary Annual Revenue</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>